--- a/SLA_Questionnaires_Import.Rmd
+++ b/SLA_Questionnaires_Import.Rmd
@@ -54,13 +54,41 @@ run=(0:2)
 nrun=length(run)
 
 Behav$RSE<-NA
+Behav$IRI_Total<-NA
+Behav$IRI_EC<-NA
+Behav$IRI_PT<-NA
+Behav$IRI_distress<-NA
+Behav$IRI_Fantasy<-NA
+Behav$MSPSS_Total<-NA
+Behav$MSPSS_Friend<-NA
 
 for(i in 1:nsubj){
           RSE<-(Questionnaires$TOTAL.RSE.ALL[Questionnaires$Subject.ID==subj[i]])
           Behav$RSE[Behav$Subject==subj[i]]<-RSE
+          
+          IRI_Total<-(Questionnaires$TOTAL.IRI...ALL.4..PT..FS..EC..PD.[Questionnaires$Subject.ID==subj[i]])
+          Behav$IRI_Total[Behav$Subject==subj[i]]<-IRI_Total
+          
+          IRI_EC<-(Questionnaires$X.IRI..Total..only.Empathy.[Questionnaires$Subject.ID==subj[i]])
+          Behav$IRI_EC[Behav$Subject==subj[i]]<-IRI_EC
+          
+          IRI_Fantasy<-(Questionnaires$X.IRI..Total..only.Fantasy.[Questionnaires$Subject.ID==subj[i]])
+          Behav$IRI_Fantasy[Behav$Subject==subj[i]]<-IRI_Fantasy
+          
+          IRI_PT<-(Questionnaires$X.IRI..Total..only.Perspective.[Questionnaires$Subject.ID==subj[i]])
+          Behav$IRI_PT[Behav$Subject==subj[i]]<-IRI_PT
+          
+          IRI_distress<-(Questionnaires$X.IRI..Total..only.distress.[Questionnaires$Subject.ID==subj[i]])
+          Behav$IRI_distress[Behav$Subject==subj[i]]<-IRI_distress
+          
+          MSPSS_Total<-(Questionnaires$Total.MPSS.ALL[Questionnaires$Subject.ID==subj[i]])
+          Behav$MSPSS_Total[Behav$Subject==subj[i]]<-MSPSS_Total
+          
+          MSPSS_Friend<-(Questionnaires$Total.FRIENDS.only[Questionnaires$Subject.ID==subj[i]])
+          Behav$MSPSS_Friend[Behav$Subject==subj[i]]<-MSPSS_Friend
 }
 
-
+write.csv(x=Behav, file='SLA_Empathy_allsubs_NAs_SelfReport')
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
